@@ -1,0 +1,46 @@
+/*
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.airlift.http.client;
+
+import com.google.common.collect.ImmutableList;
+import com.google.common.net.HostAndPort;
+import org.eclipse.jetty.proxy.ConnectHandler;
+import org.eclipse.jetty.proxy.ProxyServlet;
+
+import java.util.Optional;
+
+public class TestingHttpProxy
+        implements AutoCloseable
+{
+    private final TestingHttpServer server;
+
+    public TestingHttpProxy(Optional<String> keystore)
+            throws Exception
+    {
+        ProxyServlet servlet = new ProxyServlet();
+        this.server = new TestingHttpServer(keystore, servlet, httpConfiguration -> httpConfiguration.setSendDateHeader(false), ImmutableList.of(new ConnectHandler()));
+    }
+
+    public HostAndPort getHostAndPort()
+    {
+        return server.getHostAndPort();
+    }
+
+    @Override
+    public void close()
+            throws Exception
+    {
+        server.close();
+    }
+}
